# 2019_Group_38

./: .gitignore  .travis.yml  Boss.txt  CMakeLists.txt  Doxyfile  README.md  TEAM.md  generateDocumentationAndDeploy.sh
Materials/: Material.cpp  main.cpp
Worksheet6/: mainwindow.cpp  mainwindow.h  mainwindow.ui
cell/: main.cpp
html/: annotated.html  cell_8cpp.html  cell_8h.html  cell_8h_source.html  class_main_window-members.html  class_main_window.html  classcell-members.html  classcell.html  classes.html  classmaterial-members.html  classmaterial.html  classmodel-members.html  classmodel.html  classoptions_filter-members.html  classoptions_filter.html  classvector_class-members.html  classvector_class.html  classvtk_my_callback-members.html  classvtk_my_callback.html  dir_02bdfdb686f4f1bea206bd1b22cb9f0d.html  dir_c1b99cec4a4a0dc5e00941ce62db4855.html  dir_e3cd07290fd57819a5e0c44f4bdd52d5.html  dir_f1c156d849bd16be82a9176b257c4a00.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  material_8h.html  material_8h_source.html  model_8cpp.html  model_8h.html  model_8h_source.html  namespace_ui.html  namespaces.html  optionsfilter_8cpp.html  optionsfilter_8h.html  (+4 more)
html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  (+11 more)
inc/: cell.h  material.h  model.h  vectorClass.h
material/: CMakeLists.txt  Material.h  material.sln  material.vcxproj  material.vcxproj.filters
mod/: ExampleModel1.mod
modelTest/: main.cpp  modelTest.cpp
modelViewer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsfilter.cpp  optionsfilter.h  optionsfilter.ui
src/: cell.cpp  main.cpp  material.cpp  model.cpp  vectorClass.cpp
vector/: Vector.cpp  Vector.h  main.cpp
worksheet6/: mainwindow.h
(+18 files in other folders)
